--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ app/src/__pycache__/__init__.cpython-310.pyc
 app/src/__pycache__/back.cpython-310.pyc
 app/src/__pycache__/database_up.cpython-310.pyc
 app/src/__pycache__/sel.cpython-310.pyc
+app/src/__pycache__/database_loader.cpython-310.pyc
